# squeeezo

./: .gitignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml  tsconfig.base.json
apps/desktop/: components.json  eslint.config.js  index.html  package.json  tailwind.config.ts  tsconfig.app.json  tsconfig.node.json
apps/desktop/src/: App.tsx  main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: main.rs
apps/desktop/src-tauri/src/commands/: mod.rs
apps/desktop/src-tauri/src/state/: mod.rs
apps/desktop/src/app/: App.tsx
apps/desktop/src/components/ui/: button.tsx  card.tsx
apps/desktop/src/features/compress/: api.ts  types.ts
apps/desktop/src/hooks/: use-app-bootstrap.ts
apps/desktop/src/lib/: store.ts  tauri.ts
apps/desktop/src/styles/: globals.css
crates/compression-cli/: Cargo.toml
crates/compression-cli/src/: main.rs
crates/compression-core/: Cargo.toml
crates/compression-core/src/: analyze.rs  compress.rs  engine.rs  errors.rs  lib.rs  models.rs  naming.rs
docs/: implementation-plan.md  release.md  research.md
macos/SqueeezoActionExtension/: project.yml
macos/SqueeezoActionExtension/ActionExtension/: ActionRequestHandler.swift  Info.plist
macos/SqueeezoActionExtension/SqueeezoActionExtension.xcodeproj/: project.pbxproj
macos/SqueeezoActionExtension/SqueeezoActionExtension.xcodeproj/xcshareddata/xcschemes/: SqueeezoActionExtension.xcscheme
scripts/: package-macos-extension.sh
(+3 files in other folders)
