[workspace]
members = [
  "apps/desktop/src-tauri",
  "crates/compression-cli",
  "crates/compression-core",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "AGPL-3.0-or-later"
version = "0.1.0"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
